kubernetes/analytics/zeppelin/zeppelin.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zeppelin-server
  namespace: analytics
  labels:
    app: zeppelin-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zeppelin-server
  template:
    metadata:
      labels:
        task: zeppelin-server
        k8s-app: zeppelin-server
        app: zeppelin-server
    spec:
      containers:
      - name: zeppelin-server
        ports:
        - name: http-zep
          containerPort: 8080
        - name: http
          containerPort: 80
        - name: rpc
          containerPort: 12320
        image: basraven/zeppelin:0.9.1
        resources: {}
        volumeMounts:
          - name: zeppelin-notebooks-volume
            mountPath: /notebook 
      - name: zeppelin-server-gateway
        image: nginx:1.14.0
        command: ["/bin/sh", "-c"]
        args:
          - cp -f /tmp/conf/nginx.conf /etc/nginx/nginx.conf;
            sed -i -e "s/SERVICE_DOMAIN/$SERVICE_DOMAIN/g" /etc/nginx/nginx.conf;
            sed -i -e "s/NAMESPACE/$NAMESPACE/g" /etc/nginx/nginx.conf;
            cat /etc/nginx/nginx.conf;
            /usr/sbin/nginx
        volumeMounts:
          - name: nginx-conf
            mountPath: /tmp/conf
        lifecycle:
          preStop:
            exec:
              # SIGTERM triggers a quick exit; gracefully terminate instead
              command: ["/usr/sbin/nginx", "-s", "quit"]
      - name: dnsmasq  # nginx requires dns resolver for dynamic dns resolution
        image: "janeczku/go-dnsmasq:release-1.0.5"
        args:
          - --listen
          - "127.0.0.1:53"
          - --default-resolver
          - --append-search-domains
          - --hostsfile=/etc/hosts
          - --verbose
      volumes:
        - name: zeppelin-notebooks-volume
          persistentVolumeClaim:
            claimName: zeppelin-notebooks-claim
        - name: nginx-conf
          configMap:
            name: zeppelin-server-conf
            items:
            - key: nginx.conf
              path: nginx.conf
---
apiVersion: v1
kind: Service
metadata:
  name: zeppelin-server
  labels:
    app: zeppelin-server
  namespace: analytics
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  - name: rpc
    port: 12320
    protocol: TCP
    targetPort: 12320
  selector:
    app: zeppelin-server
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zeppeliningress
  namespace: analytics
spec:
  rules:
  - host: zeppelin.bas
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: zeppelin-server
            port:
              number: 80
